--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@babel/core": "7.1.0",
     "@babel/plugin-proposal-decorators": "^7.1.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.7",
+    "@fortawesome/free-solid-svg-icons": "^5.4.2",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "@pusher/chatkit": "^0.7.18",
     "@sendgrid/mail": "^6.3.1",
     "@svgr/webpack": "2.4.1",
