--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chalk": "2.4.1",
     "concurrently": "^4.0.1",
     "cors": "^2.8.4",
+    "cron": "^1.4.1",
     "css-loader": "1.0.0",
     "dotenv": "^6.0.0",
     "dotenv-expand": "4.2.0",
@@ -36,6 +37,7 @@
     "express": "^4.16.4",
     "file-loader": "2.0.0",
     "fs-extra": "7.0.0",
+    "html-react-parser": "^0.4.7",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
     "jest": "23.6.0",
@@ -60,6 +62,7 @@
     "react-dev-utils": "^6.0.5",
     "react-dom": "^16.5.2",
     "react-loader-spinner": "^2.0.6",
+    "react-quill": "^1.3.1",
     "react-responsive-modal": "^3.4.0",
     "react-router-dom": "^4.3.1",
     "resolve": "1.8.1",
