--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "workbox-webpack-plugin": "3.6.2"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "node server.js",
     "dev": "concurrently --kill-others \"node scripts/start.js\" \"nodemon server.js\"",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
