--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "3.6.2"
   },
+  "proxy": "http://localhost:5000/",
   "scripts": {
     "start": "node server.js",
     "dev": "concurrently --kill-others \"node scripts/start.js\" \"nodemon server.js\"",
